--- a/src/main/resources/templates/createdemo.xhtml
+++ b/src/main/resources/templates/createdemo.xhtml
@@ -85,7 +85,7 @@
                 </div>
                 <div class="submitButtonGroupCD">
                     <button type="submit" class="btn btn-primary">Submit</button>
-                    <button type="submit" th:onclick="|window.location.href='/'|" class="btn btn-outline-secondary">Cancel</button>
+                    <button type="button" th:onclick="|window.location.href='/index'|" class="btn btn-outline-secondary">Cancel</button>
                 </div>
             </form>
         </div>
