--- a/src/main/resources/templates/displayevents.xhtml
+++ b/src/main/resources/templates/displayevents.xhtml
@@ -7,12 +7,13 @@
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
     <link href="../static/css/streamingwars.css" rel="stylesheet" th:href="@{/css/streamingwars.css}"/>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <link href="../static/js/bootstrap.bundle.js" rel="script" th:href="@{/js/bootstrap.bundle.js}"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"  crossorigin="anonymous"/>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" integrity="sha512-mSYUmp1HYZDFaVKK//63EcZq4iFWFjxSL+Z3T/aCt4IO9Cejm03q3NKKYN6pFQzY0SBOr8h+eCIAZHPXcpZaNw==" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js" integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ==" crossorigin="anonymous"></script>
-    <script>
+    <script type="text/javascript">
         $( document ).ready(function() {
             $("#datepicker").datepicker({
                 format: "mm-yyyy",
@@ -23,6 +24,67 @@
             });
             $( "#datepicker" ).datepicker( "setDate", new Date());
         });
+
+        $(document).on('click', '#editButton', function(){
+            console.log("ara")
+            var $btn = $(this);
+            var rowId = $btn.attr('data-id');
+            var shortName = $btn.attr('data-sName')
+            var year = $btn.attr('data-year')
+            var licenceFees = $btn.attr('data-eventLicensingFee')
+            var $modal = $('#exampleModal')
+            $modal.find('#idvalue').val(rowId)
+            $modal.find('#name').val(shortName)
+            $modal.find('#year').val(year)
+            $modal.find('#eventLicensingFee').val(licenceFees)
+            $modal.modal();
+        });
+
+        $(document).on('click', '#saveChanges', function(){
+            var unindexed_array = $("#updateForm").serializeArray();
+            var indexed_array = {};
+            $.map(unindexed_array, function(n, i){
+                indexed_array[n['name']] = n['value'];
+            });
+            var jsonString = JSON.stringify(indexed_array);
+            console.log(jsonString)
+            var url =  "http://localhost:8080/api/updateEvent";
+            var $modal = $('#exampleModal')
+            $.ajax({
+                type: "POST",
+                url: url,
+                contentType: "application/json",
+                data: jsonString,
+                beforeSend: function() { },
+                complete: function() {
+                    console.log("Success")
+                },
+                success: function(data) {
+                    console.log( "Returned Success Response -->" +data)
+                    $modal.modal('hide')
+                    var newLocation = window.location.href.toString().replace("#",'')
+                    if(newLocation.indexOf("?")!=-1) {
+                        removeString = newLocation.substring(newLocation.indexOf("?"), newLocation.length);
+                        newLocation = newLocation.replace(removeString, '');
+                    }
+                    console.log(newLocation.indexOf("Status=SUCCESS"));
+                    window.location.href = newLocation + "?Status=SUCCESS";
+                },
+                error: function(data) {
+                    console.log( "Returned Error Response -->" +data)
+                    $modal.modal('hide')
+                    var newLocation = window.location.href.toString().replace("#",'')
+                    if(newLocation.indexOf("?")!=-1) {
+                        removeString = newLocation.substring(newLocation.indexOf("?"), newLocation.length);
+                        newLocation = newLocation.replace(removeString, '');
+                    }
+                    console.log("Modified New Location -->"+newLocation)
+                    window.location.href = newLocation+ "?Status=ERROR";
+                },
+                dataType: 'json'
+            });
+
+        });
     </script>
 </head>
 <body class="d-flex flex-column">
@@ -30,53 +92,101 @@
 <!-- Static navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/"><i class="fab fa-jedi-order fa-2x"></i> <span style="padding-left: 8px;font-size: larger">StreamingWars</span></a>
+        <a class="navbar-brand" href="/index"><i class="fab fa-jedi-order fa-2x"></i> <span style="padding-left: 8px;font-size: larger">StreamingWars</span></a>
         <ul class="nav navbar-nav navbar-right">
-            <li class="white"><a class="white" href="#"><span class="glyphicon glyphicon-user white"></span> Sign Up</a></li>
-            <li  style="padding-left: 15px;"><a class="white" href="#"><span class="glyphicon glyphicon-log-in white"></span> Login</a></li>
+            <li class="white"><a class="white" href="/"><span class="glyphicon glyphicon-user white"></span> Log Out</a></li>
         </ul>
     </div>
 </nav>
 <div class="container-fluid page-content">
-    <div class="card mx-auto my-xl-5" style="width: 28rem;">
-        <div class="card-body" >
-<!--            <form action="#" th:action="@{/displayevents}" th:object="${event}" method="post">-->
-<!--                <div class="form-group">-->
-<!--                    <label for="shortname">Short Name:</label>-->
-<!--                    <input type="text" class="form-control" id="shortname" aria-describedby="shortNameHelp" th:field="${studio.shortName}" th:value="${studio.shortName}" required="required"/>-->
-<!--                    <small id="shortNameHelp" class="form-text text-muted">Enter Event ShortName</small>-->
-<!--                    <div class="invalid-feedback">Short Name Cannot be Empty</div>-->
-<!--                </div>-->
-<!--                <button type="submit" class="btn btn-primary">Submit</button>-->
-<!--                <button type="submit" th:onclick="|window.location.href='./'|" class="btn btn-outline-secondary">Cancel</button>-->
-<!--            </form>-->
-<!--            <span th:text ="${studio.shortName}"></span>-->
-<!--            <span th:text ="${studio.longName}"></span>-->
+    <!-- THese are for ThymeLeaf Updates dont change it -->
+    <div class="alert alert-success mx-auto my-1" role="alert" th:if="${successmessage}">
+        <span id="successmessage" th:text="${successmessage}"></span>
+    </div>
+    <div class="alert alert-danger mx-auto my-1" role="alert" th:if="${errormessage}">
+        <span id="errormessage" th:text="${errormessage}"></span>
+    </div>
+    <div id="displayTable" class="card mx-auto my-xl-5 d-flex" style="width: 50rem;">
+        <div class="card-header d-flex" style="font-weight: bold">Events</div>
+        <div class="table table-sm table-bordered table-striped " style="margin: 1px">
             <table border="1">
                 <tr>
-                    <th>Event Type</th>
-                    <th>Name</th>
-                    <th>Year</th>
-                    <th>Duration</th>
-                    <th>Studio Short Name</th>
-                    <th>Event Licensing Fee</th>
+                    <th  scope="col">ID</th>
+                    <th  scope="col">Event Type</th>
+                    <th  scope="col">Name</th>
+                    <th  scope="col">Year</th>
+                    <th  scope="col">Duration</th>
+                    <th  scope="col">Studio Short Name</th>
+                    <th  scope="col">Event Licensing Fee</th>
+                    <th  scope="col">Editable</th>
                 </tr>
                 <tr th:each="event :${events}">
+                    <td th:text="${event.id}"> Event Type </td>
                     <td th:text="${event.eventType}"> Event Type </td>
                     <td th:text="${event.name}"> Name </td>
                     <td th:text="${event.year}"> Year </td>
                     <td th:text="${event.duration}"> Duration </td>
                     <td th:text="${event.studioShortName}"> Studio Short Name </td>
                     <td th:text="${event.eventLicensingFee}"> Event Licensing Fee </td>
+                    <td>
+                        <a th:if="!${event.editable}" href="#" id="editButton" class="editButtonClass" th:attr="data-id=${event.id},data-sName=${event.name},data-year=${event.year},data-studioShortName=${event.studioShortName},data-eventLicensingFee=${event.eventLicensingFee}"><i class="pen far fa-edit"></i></a>
+                        <i th:if="${event.editable}" class="pen fas fa-ban editButtonClass"></i>
+                    </td>
                 </tr>
             </table>
         </div>
     </div>
- </div>
+</div>
+
+
 <footer id="sticky-footer" class="py-2 bg-secondary text-white-50">
     <div class="container text-center">
         <small>Copyright CS6310 Group A82 &copy; Streaming Wars. All rights reserved.</small>
     </div>
 </footer>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Edit Events</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="updateForm" action="#" th:action="@{/updateEvent}" th:object="${editObject}" method="post">
+                    <div class="form-group">
+                        <input type="hidden" class="form-control" id="idvalue" aria-describedby="idHelp"  name="id" value="" readonly="readonly"/>
+                        <label for="name">Name:</label>
+                        <input type="text" class="form-control" id="name" name="name" aria-describedby="nameHelp" readonly="readonly" required="required"/>
+                        <small id="nameHelp" class="form-text text-muted">Enter name</small>
+                        <div class="invalid-feedback">Name Cannot be Empty</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="year">Year:</label>
+                        <input type="text" class="form-control" id="year" name="year" aria-describedby="yearHelp" readonly="readonly" required="required"/>
+                        <small id="yearHelp" class="form-text text-muted">Enter Year</small>
+                        <div class="invalid-feedback">Year cannot be Empty</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="eventlicensingFee">Licensing Fee:</label>
+                        <input type="text" class="form-control" name="eventLicensingFee" id="eventLicensingFee" aria-describedby="eventlicensingfeeHelp" required="required"/>
+                        <small id="eventlicensingfeeHelp" class="form-text text-muted">Enter Event Licensing Fee</small>
+                        <div class="invalid-feedback">Event Licensing Fee cannot be Empty</div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" id="saveChanges" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 </body>
 </html>
