--- a/src/main/resources/templates/watchevent.xhtml
+++ b/src/main/resources/templates/watchevent.xhtml
@@ -146,7 +146,7 @@
                     <small id="creationDateHelp" class="form-text text-muted">Defaulted to Current Month</small>
                 </div>
                 <button type="submit" id="submit" class="btn btn-primary" disabled="disabled">Submit</button>
-                <button type="submit" th:onclick="|window.location.href='/'|" class="btn btn-outline-secondary">Cancel</button>
+                <button type="button" th:onclick="|window.location.href='/index'|" class="btn btn-outline-secondary">Cancel</button>
             </form>
         </div>
 <!--        <div class="card-body">-->
