--- a/src/main/resources/templates/displayoffers.xhtml
+++ b/src/main/resources/templates/displayoffers.xhtml
@@ -30,38 +30,26 @@
 <!-- Static navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/"><i class="fab fa-jedi-order fa-2x"></i> <span style="padding-left: 8px;font-size: larger">StreamingWars</span></a>
+        <a class="navbar-brand" href="/index"><i class="fab fa-jedi-order fa-2x"></i> <span style="padding-left: 8px;font-size: larger">StreamingWars</span></a>
         <ul class="nav navbar-nav navbar-right">
-            <li class="white"><a class="white" href="#"><span class="glyphicon glyphicon-user white"></span> Sign Up</a></li>
-            <li  style="padding-left: 15px;"><a class="white" href="#"><span class="glyphicon glyphicon-log-in white"></span> Login</a></li>
+            <li class="white"><a class="white" href="/"><span class="glyphicon glyphicon-user white"></span> Log Out</a></li>
         </ul>
     </div>
 </nav>
 <div class="container-fluid page-content">
-    <div class="card mx-auto my-xl-5" style="width: 28rem;">
-        <div class="card-body" >
-<!--            <form action="#" th:action="@{/displayevents}" th:object="${event}" method="post">-->
-<!--                <div class="form-group">-->
-<!--                    <label for="shortname">Short Name:</label>-->
-<!--                    <input type="text" class="form-control" id="shortname" aria-describedby="shortNameHelp" th:field="${studio.shortName}" th:value="${studio.shortName}" required="required"/>-->
-<!--                    <small id="shortNameHelp" class="form-text text-muted">Enter Event ShortName</small>-->
-<!--                    <div class="invalid-feedback">Short Name Cannot be Empty</div>-->
-<!--                </div>-->
-<!--                <button type="submit" class="btn btn-primary">Submit</button>-->
-<!--                <button type="submit" th:onclick="|window.location.href='./'|" class="btn btn-outline-secondary">Cancel</button>-->
-<!--            </form>-->
-<!--            <span th:text ="${studio.shortName}"></span>-->
-<!--            <span th:text ="${studio.longName}"></span>-->
+    <div id="displayTable" class="card mx-auto my-xl-5 d-flex" style="width: 63rem;">
+        <div class="card-header d-flex" style="font-weight: bold">Offers</div>
+        <div class="table table-sm table-bordered table-striped " style="margin: 1px">
             <table border="1">
                 <tr>
-                    <th>Streaming Service</th>
-                    <th>Event Type</th>
-                    <th>Name</th>
-                    <th>Year</th>
-                    <th>Duration</th>
-                    <th>Studio Short Name</th>
-                    <th>Event Licensing Fee</th>
-                    <th>Event PPV Cost</th>
+                    <th scope="col">Streaming Service</th>
+                    <th scope="col">Event Type</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Year</th>
+                    <th scope="col">Duration</th>
+                    <th scope="col">Studio Short Name</th>
+                    <th scope="col">Event Licensing Fee</th>
+                    <th scope="col">Event PPV Cost</th>
                 </tr>
                 <tr th:each="transaction :${transactions}">
                     <td th:text="${transaction.buyer}"> Streaming Service </td>
@@ -76,7 +64,7 @@
             </table>
         </div>
     </div>
- </div>
+</div>
 <footer id="sticky-footer" class="py-2 bg-secondary text-white-50">
     <div class="container text-center">
         <small>Copyright CS6310 Group A82 &copy; Streaming Wars. All rights reserved.</small>
