--- a/src/main/resources/templates/displaystream.xhtml
+++ b/src/main/resources/templates/displaystream.xhtml
@@ -63,15 +63,44 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <button type="button" th:onclick="|window.location.href='/index'|" class="btn btn-outline-secondary">Cancel</button>
             </form>
-            <span th:text ="${stream.shortName}"></span>
-            <span th:text ="${stream.longName}"></span>
-            <span th:text ="${stream.subscriptionPrice}"></span>
-            <span th:text ="${transactionSummary.currentPeriod}"></span>
-            <span th:text ="${transactionSummary.previousPeriod}"></span>
-            <span th:text ="${transactionSummary.total}"></span>
-            <span th:text ="${transactionSummary.licensing}"></span>
+            <span ></span>
+            <span ></span>
+            <span ></span>
+            <span ></span>
+            <span ></span>
+            <span ></span>
+            <span ></span>
         </div>
     </div>
+
+    <div id="displayTable" class="card mx-auto my-xl-5 d-flex" style="width: 100rem;">
+        <div class="card-header d-flex" style="font-weight: bold">Demographic Groups</div>
+        <div class="table-responsive " style="margin: 1px">
+            <table class="table table-sm table-bordered table-striped">
+                <tr>
+                    <th scope="col">Stream Short Name</th>
+                    <th scope="col">Stream Long Name</th>
+                    <th scope="col">Stream Subscription Price</th>
+                    <th scope="col">Current Period</th>
+                    <th scope="col">Previous Period</th>
+                    <th scope="col">Total</th>
+                    <th scope="col">Licensing</th>
+                </tr>
+                <tr>
+                    <td th:text ="${stream.shortName}"> Streaming Service </td>
+                    <td th:text ="${stream.longName}"> Type </td>
+                    <td th:text ="${stream.subscriptionPrice}"> Name </td>
+                    <td th:text ="${transactionSummary.currentPeriod}"> Year </td>
+                    <td th:text ="${transactionSummary.previousPeriod}"> Duration </td>
+                    <td th:text ="${transactionSummary.total}"> Streaming Service </td>
+                    <td th:text ="${transactionSummary.licensing}"> Type </td>
+
+                </tr>
+            </table>
+        </div>
+    </div>
+
+
  </div>
 <footer id="sticky-footer" class="py-2 bg-secondary text-white-50">
     <div class="container text-center">
