--- a/src/main/resources/templates/displaystudio.xhtml
+++ b/src/main/resources/templates/displaystudio.xhtml
@@ -61,13 +61,33 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <button type="button" th:onclick="|window.location.href='./index'|" class="btn btn-outline-secondary">Cancel</button>
             </form>
-            <span th:text ="${studio.shortName}"></span>
-            <span th:text ="${studio.longName}"></span>
-            <span th:text ="${transactionSummary.currentPeriod}"></span>
-            <span th:text ="${transactionSummary.previousPeriod}"></span>
-            <span th:text ="${transactionSummary.total}"></span>
+
         </div>
     </div>
+
+    <div id="displayTable" class="card mx-auto my-xl-5 d-flex" style="width: 100rem;">
+        <div class="card-header d-flex" style="font-weight: bold">Demographic Groups</div>
+        <div class="table-responsive " style="margin: 1px">
+            <table class="table table-sm table-bordered table-striped">
+                    <tr>
+                        <th scope="col">Studio Short Name</th>
+                        <th scope="col">Studio Long Name</th>
+                        <th scope="col">Current Period</th>
+                        <th scope="col">Previous Period</th>
+                        <th scope="col">Total</th>
+                    </tr>
+                    <tr>
+                        <td th:text ="${studio.shortName}"> Streaming Service </td>
+                        <td th:text ="${studio.longName}"> Type </td>
+                        <td th:text ="${transactionSummary.currentPeriod}"> Name </td>
+                        <td th:text ="${transactionSummary.previousPeriod}"> Year </td>
+                        <td th:text ="${transactionSummary.total}"> Duration </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+
  </div>
 <footer id="sticky-footer" class="py-2 bg-secondary text-white-50">
     <div class="container text-center">
