This code when checked out will have all functionalities except the Edit check.

--- a/src/main/resources/templates/displayevents.xhtml
+++ b/src/main/resources/templates/displayevents.xhtml
@@ -68,7 +68,14 @@
                         newLocation = newLocation.replace(removeString, '');
                     }
                     console.log(newLocation.indexOf("Status=SUCCESS"));
-                    window.location.href = newLocation + "?Status=SUCCESS";
+                    if(data!=false) {
+                        console.log(newLocation.indexOf("Status=SUCCESS"));
+                        window.location.href = newLocation + "?Status=SUCCESS";
+                    }
+                    else
+                    {
+                        window.location.href = newLocation + "?Status=ERROR";
+                    }
                 },
                 error: function(data) {
                     console.log( "Returned Error Response -->" +data)
