--- a/src/main/resources/templates/displaystudio.xhtml
+++ b/src/main/resources/templates/displaystudio.xhtml
@@ -37,38 +37,28 @@
     </div>
 </nav>
 <div class="container-fluid page-content">
-    <div class="card mx-auto my-xl-5" style="width: 28rem;">
-        <div class="card-body" >
-            <form action="#" th:action="@{/displaystudio}" th:object="${studio}" method="post">
-                <div class="form-group">
-                    <label for="shortname">Short Name:</label>
-                    <input type="text" class="form-control" id="shortname" aria-describedby="shortNameHelp" th:field="${studio.shortName}" th:value="${studio.shortName}" required="required"/>
-                    <small id="shortNameHelp" class="form-text text-muted">Enter Studio ShortName</small>
-                    <div class="invalid-feedback">Short Name Cannot be Empty</div>
-                </div>
-                <div class="form-group">
-                    <label for="datepicker">Creation Date:</label>
-                    <div class="input-group">
-                        <input type="text" id="datepicker" class="form-control" aria-describedby="datepicker" readonly="readonly" th:field="${studio.currentMonthYear}" th:value="${studio.currentMonthYear}" required="required"/>
-                        <label class="input-group-btn" for="datepicker">
-                            <span class="btn btn-default">
-                            <span class="fa fa-calendar open-datetimepicker"></span>
-                             </span>
-                        </label>
-                    </div>
-                    <small id="creationDateHelp" class="form-text text-muted">Defaulted to Current Month</small>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="button" th:onclick="|window.location.href='./index'|" class="btn btn-outline-secondary">Cancel</button>
-            </form>
-            <span th:text ="${studio.shortName}"></span>
-            <span th:text ="${studio.longName}"></span>
-            <span th:text ="${transactionSummary.currentPeriod}"></span>
-            <span th:text ="${transactionSummary.previousPeriod}"></span>
-            <span th:text ="${transactionSummary.total}"></span>
+    <div id="displayTable" class="card mx-auto my-xl-5 d-flex" style="width: 100rem;">
+        <div class="card-header d-flex" style="font-weight: bold">Studios</div>
+        <div class="table-responsive " style="margin: 1px">
+            <table class="table table-sm table-bordered table-striped">
+                    <tr>
+                        <th scope="col">Studio Short Name</th>
+                        <th scope="col">Studio Long Name</th>
+                        <th scope="col">Current Period</th>
+                        <th scope="col">Previous Period</th>
+                        <th scope="col">Total</th>
+                    </tr>
+                    <tr th:each="tsum :${transactionSummaries}">
+                        <td th:text ="${tsum.shortName}"> Streaming Service </td>
+                        <td th:text ="${tsum.longName}"> Type </td>
+                        <td th:text ="${tsum.currentPeriod}"> Name </td>
+                        <td th:text ="${tsum.previousPeriod}"> Year </td>
+                        <td th:text ="${tsum.total}"> Duration </td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
- </div>
 <footer id="sticky-footer" class="py-2 bg-secondary text-white-50">
     <div class="container text-center">
         <small>Copyright CS6310 Group A82 &copy; Streaming Wars. All rights reserved.</small>
