--- a/src/main/resources/templates/displaystream.xhtml
+++ b/src/main/resources/templates/displaystream.xhtml
@@ -7,9 +7,10 @@
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
     <link href="../static/css/streamingwars.css" rel="stylesheet" th:href="@{/css/streamingwars.css}"/>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <link href="../static/js/bootstrap.bundle.js" rel="script" th:href="@{/js/bootstrap.bundle.js}"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"  crossorigin="anonymous"/>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" integrity="sha512-mSYUmp1HYZDFaVKK//63EcZq4iFWFjxSL+Z3T/aCt4IO9Cejm03q3NKKYN6pFQzY0SBOr8h+eCIAZHPXcpZaNw==" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js" integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ==" crossorigin="anonymous"></script>
     <script>
@@ -22,6 +23,74 @@
                 autoclose: true
             });
             $( "#datepicker" ).datepicker( "setDate", new Date());
+
+            $(document).on('click', '#editButton', function(){
+                console.log("ara")
+                var $btn = $(this);
+                var rowId = $btn.attr('data-id');
+                var shortName = $btn.attr('data-sName')
+                var longName = $btn.attr('data-lName')
+                var subscriptionPrice = $btn.attr('data-subscriptionPrice')
+                var licenceFees = $btn.attr('data-licensing')
+                var $modal = $('#exampleModal')
+                $modal.find('#idvalue').val(rowId)
+                $modal.find('#shortName').val(shortName)
+                $modal.find('#longName').val(longName)
+                $modal.find('#subscriptionPrice').val(subscriptionPrice)
+                $modal.modal();
+            });
+
+            $(document).on('click', '#saveChanges', function() {
+                var unindexed_array = $("#updateForm").serializeArray();
+                var indexed_array = {};
+                $.map(unindexed_array, function (n, i) {
+                    indexed_array[n['name']] = n['value'];
+                });
+                var jsonString = JSON.stringify(indexed_array);
+                console.log(jsonString)
+                var url = "http://localhost:8080/api/updateStream";
+                var $modal = $('#exampleModal')
+                $.ajax({
+                    type: "POST",
+                    url: url,
+                    contentType: "application/json",
+                    data: jsonString,
+                    beforeSend: function () {
+                    },
+                    complete: function () {
+                        console.log("Success")
+                    },
+                    success: function (data) {
+                        console.log("Returned Success Response -->" + data)
+                        $modal.modal('hide')
+                        var newLocation = window.location.href.toString().replace("#", '')
+                        if (newLocation.indexOf("?") != -1) {
+                            removeString = newLocation.substring(newLocation.indexOf("?"), newLocation.length);
+                            newLocation = newLocation.replace(removeString, '');
+                        }
+                        if(data!=false) {
+                            console.log(newLocation.indexOf("Status=SUCCESS"));
+                            window.location.href = newLocation + "?Status=SUCCESS";
+                        }
+                        else
+                        {
+                            window.location.href = newLocation + "?Status=ERROR";
+                        }
+                    },
+                    error: function (data) {
+                        console.log("Returned Error Response -->" + data)
+                        $modal.modal('hide')
+                        var newLocation = window.location.href.toString().replace("#", '')
+                        if (newLocation.indexOf("?") != -1) {
+                            removeString = newLocation.substring(newLocation.indexOf("?"), newLocation.length);
+                            newLocation = newLocation.replace(removeString, '');
+                        }
+                        console.log("Modified New Location -->" + newLocation)
+                        window.location.href = newLocation + "?Status=ERROR";
+                    },
+                    dataType: 'json'
+                });
+            });
         });
     </script>
 </head>
@@ -39,44 +108,95 @@
     </div>
 </nav>
 <div class="container-fluid page-content">
-    <div class="card mx-auto my-xl-5" style="width: 28rem;">
-        <div class="card-body" >
-            <form action="#" th:action="@{/displaystream}" th:object="${stream}" method="post">
-                <div class="form-group">
-                    <label for="shortname">Short Name:</label>
-                    <input type="text" class="form-control" id="shortname" aria-describedby="shortNameHelp" th:field="${stream.shortName}" th:value="${stream.shortName}" required="required"/>
-                    <small id="shortNameHelp" class="form-text text-muted">Enter Stream ShortName</small>
-                    <div class="invalid-feedback">Short Name Cannot be Empty</div>
-                </div>
-                <div class="form-group">
-                    <label for="datepicker">Creation Date:</label>
-                    <div class="input-group">
-                        <input type="text" id="datepicker" class="form-control" aria-describedby="datepicker" readonly="readonly" th:field="${stream.currentMonthYear}" th:value="${stream.currentMonthYear}" required="required"/>
-                        <label class="input-group-btn" for="datepicker">
-                            <span class="btn btn-default">
-                            <span class="fa fa-calendar open-datetimepicker"></span>
-                             </span>
-                        </label>
-                    </div>
-                    <small id="creationDateHelp" class="form-text text-muted">Defaulted to Current Month</small>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="button" th:onclick="|window.location.href='/index'|" class="btn btn-outline-secondary">Cancel</button>
-            </form>
-            <span th:text ="${stream.shortName}"></span>
-            <span th:text ="${stream.longName}"></span>
-            <span th:text ="${stream.subscriptionPrice}"></span>
-            <span th:text ="${transactionSummary.currentPeriod}"></span>
-            <span th:text ="${transactionSummary.previousPeriod}"></span>
-            <span th:text ="${transactionSummary.total}"></span>
-            <span th:text ="${transactionSummary.licensing}"></span>
+    <!-- THese are for ThymeLeaf Updates dont change it -->
+    <div class="alert alert-success mx-auto my-1" role="alert" th:if="${successmessage}">
+        <span id="successmessage" th:text="${successmessage}"></span>
+    </div>
+    <div class="alert alert-danger mx-auto my-1" role="alert" th:if="${errormessage}">
+        <span id="errormessage" th:text="${errormessage}"></span>
+    </div>
+    <div id="displayTable" class="card mx-auto my-xl-5 d-flex" style="width: 50rem;">
+        <div class="card-header d-flex" style="font-weight: bold">Streaming Services</div>
+        <div class="table table-sm table-bordered table-striped " style="margin: 1px">
+            <table border="1">
+                <tr>
+                    <th  scope="col">ID</th>
+                    <th  scope="col">Short Name</th>
+                    <th  scope="col">Long Name</th>
+                    <th  scope="col">Subscription Price</th>
+                    <th  scope="col">Current Period</th>
+                    <th  scope="col">Previous Period</th>
+                    <th  scope="col">Total</th>
+                    <th  scope="col">Licensing</th>
+                    <th  scope="col"></th>
+                </tr>
+                <tr th:each="tsum :${transactionSummaries}">
+                    <td th:text="${tsum.id}"> Event Type </td>
+                    <td th:text="${tsum.shortName}"> Event Type </td>
+                    <td th:text="${tsum.longName}"> Name </td>
+                    <td th:text="${tsum.subscriptionPrice}"> Year </td>
+                    <td th:text="${tsum.currentPeriod}"> Duration </td>
+                    <td th:text="${tsum.previousPeriod}"> Studio Short Name </td>
+                    <td th:text="${tsum.total}"> Event Licensing Fee </td>
+                    <td th:text="${tsum.licensing}"> Event Licensing Fee </td>
+                    <td>
+                        <a th:if="!${tsum.editable}" href="#" id="editButton" class="editButtonClass" th:attr="data-id=${tsum.id},data-sName=${tsum.shortName},data-lName=${tsum.longName},data-subscriptionPrice=${tsum.subscriptionPrice},data-licensing=${tsum.licensing}"><i class="pen far fa-edit"></i></a>
+                        <i th:if="${tsum.editable}" class="pen fas fa-ban editButtonClass"></i>
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
- </div>
+
+</div>
 <footer id="sticky-footer" class="py-2 bg-secondary text-white-50">
     <div class="container text-center">
         <small>Copyright CS6310 Group A82 &copy; Streaming Wars. All rights reserved.</small>
     </div>
 </footer>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Edit Events</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="updateForm" action="#" th:action="@{/displaystream}" th:object="${transactionSummary}" method="post">
+                    <div class="form-group">
+                        <input type="hidden" class="form-control" id="idvalue" aria-describedby="idHelp"  name="id" value="" readonly="readonly"/>
+                        <label for="shortName">Short Name:</label>
+                        <input type="text" class="form-control" id="shortName" name="shortName" aria-describedby="shortNameHelp" readonly="readonly" required="required"/>
+                        <small id="shortNameHelp" class="form-text text-muted">Enter Streaming Service ShortName</small>
+                        <div class="invalid-feedback">Short Name Cannot be Empty</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="longName">Long Name:</label>
+                        <input type="text" class="form-control" id="longName" name="longName" aria-describedby="longNameHelp" readonly="readonly" required="required"/>
+                        <small id="longNameHelp" class="form-text text-muted">Enter Streaming Service Long Name</small>
+                        <div class="invalid-feedback">Long Name Cannot be Empty</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="subscriptionPrice">Subscription Price:</label>
+                        <input type="text" class="form-control" id="subscriptionPrice" name="subscriptionPrice" aria-describedby="longNameHelp" required="required"/>
+                        <small id="subscriptionPriceHelp" class="form-text text-muted">Enter Streaming Service Subscription Price</small>
+                        <div class="invalid-feedback">Subscription Price Cannot be Empty</div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" id="saveChanges" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 </body>
 </html>
