This code when checked out will have all functionalities except the Edit check.

--- a/src/main/resources/templates/registration.xhtml
+++ b/src/main/resources/templates/registration.xhtml
@@ -52,7 +52,7 @@
                 </div>
                 <div class="submitButtonGroupCD">
                     <button type="submit" class="btn btn-primary">Create User</button>
-                    <button type="submit" th:onclick="|window.location.href='/'|" class="btn btn-outline-secondary">Cancel</button>
+                    <button type="button" th:onclick="|window.location.href='/index'|" class="btn btn-outline-secondary">Cancel</button>
                 </div>
             </form>
         </div>
