--- a/src/main/resources/templates/updatedemo.xhtml
+++ b/src/main/resources/templates/updatedemo.xhtml
@@ -62,7 +62,7 @@
                     <div class="invalid-feedback">New Number of Accounts Cannot be Empty</div>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="submit" th:onclick="|window.location.href='/'|" class="btn btn-outline-secondary">Cancel</button>
+                <button type="submit" th:onclick="|window.location.href='/index'|" class="btn btn-outline-secondary">Cancel</button>
             </form>
         </div>
         <div class="card-body">
