--- a/src/main/resources/templates/updateevent.xhtml
+++ b/src/main/resources/templates/updateevent.xhtml
@@ -74,7 +74,7 @@
                     <div class="invalid-feedback">New Licensing Fee Cannot be Empty</div>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="submit" th:onclick="|window.location.href='/'|" class="btn btn-outline-secondary">Cancel</button>
+                <button type="button" th:onclick="|window.location.href='/index'|" class="btn btn-outline-secondary">Cancel</button>
             </form>
         </div>
         <div class="card-body">
