--- a/src/main/resources/templates/displaystream.xhtml
+++ b/src/main/resources/templates/displaystream.xhtml
@@ -118,17 +118,24 @@
     <div id="displayTable" class="card mx-auto my-xl-5 d-flex" style="width: 50rem;">
         <div class="card-header d-flex" style="font-weight: bold">Streaming Services</div>
         <div class="table table-sm table-bordered table-striped " style="margin: 1px">
-            <table border="1">
+            <table border="0">
                 <tr>
-                    <th  scope="col">ID</th>
-                    <th  scope="col">Short Name</th>
-                    <th  scope="col">Long Name</th>
-                    <th  scope="col">Subscription Price</th>
-                    <th  scope="col">Current Period</th>
-                    <th  scope="col">Previous Period</th>
-                    <th  scope="col">Total</th>
-                    <th  scope="col">Licensing</th>
-                    <th  scope="col"></th>
+                    <th class="col-1" scope="col">ID</th>
+                    <th class="col-1" scope="col">Short Name</th>
+                    <th class="col-1" scope="col">Long Name</th>
+                    <th class="col-1" scope="col">Subscription Price</th>
+                    <th class="col-1" scope="col">Current Period</th>
+                    <th class="col-1" scope="col">Previous Period</th>
+                    <th class="col-1" scope="col">Total</th>
+                    <th class="col-1" scope="col">Licensing</th>
+                    <th class="col-1" scope="col"></th>
+                </tr>
+                <tr th:if="${nodata != null}" class="max-col-span">
+                    <td colspan="100%">
+                        <div class="alert alert-light d-flex justify-content-center" role="alert" >
+                            No Rows to Display for Selected Start and End Date
+                        </div>
+                    </td>
                 </tr>
                 <tr th:each="tsum :${transactionSummaries}">
                     <td th:text="${tsum.id}"> Event Type </td>
