--- a/src/main/resources/templates/displaystudio.xhtml
+++ b/src/main/resources/templates/displaystudio.xhtml
@@ -42,11 +42,18 @@
         <div class="table-responsive " style="margin: 1px">
             <table class="table table-sm table-bordered table-striped">
                     <tr>
-                        <th scope="col">Studio Short Name</th>
-                        <th scope="col">Studio Long Name</th>
-                        <th scope="col">Current Period</th>
-                        <th scope="col">Previous Period</th>
-                        <th scope="col">Total</th>
+                        <th class="col-1" scope="col">Studio Short Name</th>
+                        <th class="col-1" scope="col">Studio Long Name</th>
+                        <th class="col-1" scope="col">Current Period</th>
+                        <th class="col-1" scope="col">Previous Period</th>
+                        <th class="col-1" scope="col">Total</th>
+                    </tr>
+                    <tr th:if="${nodata != null}" class="max-col-span">
+                        <td colspan="100%">
+                            <div class="alert alert-light d-flex justify-content-center" role="alert" >
+                                No Rows to Display for Selected Start and End Date
+                            </div>
+                        </td>
                     </tr>
                     <tr th:each="tsum :${transactionSummaries}">
                         <td th:text ="${tsum.shortName}"> Streaming Service </td>
