--- a/src/main/resources/templates/displayevents.xhtml
+++ b/src/main/resources/templates/displayevents.xhtml
@@ -25,6 +25,9 @@
             $( "#datepicker" ).datepicker( "setDate", new Date());
         });
 
+
+
+
         $(document).on('click', '#editButton', function(){
             console.log("ara")
             var $btn = $(this);
@@ -113,6 +116,7 @@
     <div class="alert alert-danger mx-auto my-1" role="alert" th:if="${errormessage}">
         <span id="errormessage" th:text="${errormessage}"></span>
     </div>
+
     <div id="displayTable" class="card mx-auto my-xl-5 d-flex" style="width: 65rem;">
         <div class="card-header d-flex" style="font-weight: bold">Events</div>
         <div class="table table-sm table-bordered table-striped " style="margin: 1px">
@@ -185,7 +189,7 @@
                         <div class="invalid-feedback">Year cannot be Empty</div>
                     </div>
                     <div class="form-group">
-                        <label for="eventlicensingFee">Licensing Fee:</label>
+                        <label for="eventLicensingFee">Licensing Fee:</label>
                         <input type="text" class="form-control" name="eventLicensingFee" id="eventLicensingFee" aria-describedby="eventlicensingfeeHelp" required="required"/>
                         <small id="eventlicensingfeeHelp" class="form-text text-muted">Enter Event Licensing Fee</small>
                         <div class="invalid-feedback">Event Licensing Fee cannot be Empty</div>
