--- a/src/main/resources/templates/displayevents.xhtml
+++ b/src/main/resources/templates/displayevents.xhtml
@@ -117,8 +117,9 @@
         <span id="errormessage" th:text="${errormessage}"></span>
     </div>
 
+
     <div id="displayTable" class="card mx-auto my-xl-5 d-flex" style="width: 65rem;">
-        <div class="card-header d-flex" style="font-weight: bold">Events</div>
+        <div class="card-header d-flex" style="font-weight: bold">Display or Update Events</div>
         <div class="table table-sm table-bordered table-striped " style="margin: 1px">
             <table border="0">
                 <tr>
@@ -152,6 +153,9 @@
                     </td>
                 </tr>
             </table>
+        </div>
+        <div id="buttongroup" class="float-right mr-4" >
+            <button style="margin-bottom: 10px;margin-top: 5px" type="button" th:onclick="|window.location.href='/index'|" class="btn btn-outline-secondary float-right">Cancel</button>
         </div>
     </div>
 </div>
