--- a/src/main/resources/templates/displaystudio.xhtml
+++ b/src/main/resources/templates/displaystudio.xhtml
@@ -48,13 +48,13 @@
 <div class="container-fluid page-content">
 
     <div class="card mx-auto my-xl-5" style="width: 28rem; margin-bottom: 0rem !important;">
-        <div class="card-header"><span style="font-weight: bold;">Display or Edit Demographic Groups</span></div>
+        <div class="card-header"><span style="font-weight: bold;">Display or Update Demographic Groups</span></div>
         <div class="card-body">
             <form action="#" th:action="@{/displaystudio}" th:object="${editObject}" method="post">
                 <div class="form-group">
                     <div class="row">
                         <div class="col">
-                            <label for="startDatePicker">Select Month &amp; Submit for Demographic details:</label>
+                            <label for="startDatePicker">Select Month &amp; Submit for Studio details:</label>
                             <input type="text" class="form-control" placeholder="startDate" id="startDatePicker" th:field="${editObject.startDate}" th:value="${editObject.startDate}" name="startDate"/>
                         </div>
                     </div>
@@ -69,31 +69,35 @@
         <div class="card-header d-flex" style="font-weight: bold">Studios</div>
         <div class="table-responsive " style="margin: 1px">
             <table class="table table-sm table-bordered table-striped">
-                    <tr>
-                        <th class="col-1" scope="col">Studio Short Name</th>
-                        <th class="col-1" scope="col">Studio Long Name</th>
-                        <th class="col-1" scope="col">Current Period</th>
-                        <th class="col-1" scope="col">Previous Period</th>
-                        <th class="col-1" scope="col">Total</th>
-                    </tr>
-                    <tr th:if="${nodata != null}" class="max-col-span">
-                        <td colspan="100%">
-                            <div class="alert alert-light d-flex justify-content-center" role="alert" >
-                                No Rows to Display for Selected Start and End Date
-                            </div>
-                        </td>
-                    </tr>
-                    <tr th:each="tsum :${transactionSummaries}">
-                        <td th:text ="${tsum.shortName}"> Streaming Service </td>
-                        <td th:text ="${tsum.longName}"> Type </td>
-                        <td th:text ="${tsum.currentPeriod}"> Name </td>
-                        <td th:text ="${tsum.previousPeriod}"> Year </td>
-                        <td th:text ="${tsum.total}"> Duration </td>
-                    </tr>
-                </table>
-            </div>
+                <tr>
+                    <th class="col-1" scope="col">Studio Short Name</th>
+                    <th class="col-1" scope="col">Studio Long Name</th>
+                    <th class="col-1" scope="col">Current Period</th>
+                    <th class="col-1" scope="col">Previous Period</th>
+                    <th class="col-1" scope="col">Total</th>
+                </tr>
+                <tr th:if="${nodata != null}" class="max-col-span">
+                    <td colspan="100%">
+                        <div class="alert alert-light d-flex justify-content-center" role="alert" >
+                            No Rows to Display for Selected Start and End Date
+                        </div>
+                    </td>
+                </tr>
+                <tr th:each="tsum :${transactionSummaries}">
+                    <td th:text ="${tsum.shortName}"> Streaming Service </td>
+                    <td th:text ="${tsum.longName}"> Type </td>
+                    <td th:text ="${tsum.currentPeriod}"> Name </td>
+                    <td th:text ="${tsum.previousPeriod}"> Year </td>
+                    <td th:text ="${tsum.total}"> Duration </td>
+                </tr>
+            </table>
+        </div>
+        <div id="buttongroup" class="float-right mr-4" >
+            <button style="margin-bottom: 10px;margin-top: 5px" type="button" th:onclick="|window.location.href='/index'|" class="btn btn-outline-secondary float-right">Cancel</button>
         </div>
     </div>
+
+</div>
 <footer id="sticky-footer" class="py-2 bg-secondary text-white-50">
     <div class="container text-center">
         <small>Copyright CS6310 Group A82 &copy; Streaming Wars. All rights reserved.</small>
